manifests/perses-operator/overlays/homelab/resources/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perses
  labels:
    shared-gateway-access: "true"
    app.kubernetes.io/part-of: perses-operator
