manifests/perses-operator/overlays/homelab/resources/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perses-http-route
  namespace: perses
  labels:
    app.kubernetes.io/name: perses
    app.kubernetes.io/instance: perses
    app.kubernetes.io/component: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitoring.nhlabs.org
spec:
  hostnames:
    - monitoring.nhlabs.org
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: shared-gateway
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: perses
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
